--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-index
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="utf-8">a
+    <title>sex西红柿sextomato最新地址</title>
+    <style>
+ h5{width:600px;height:36px;line-height: 36px;text-align:center;margin: 0 auto;position:relative;color: #ccc;}
+    h5 div:before,h5 div:after{position:absolute;background:#ccc;content:"";height:1px;top:50%;width:220px;}
+    h5 div:before{left:10px;}
+    h5 div:after{right:10px;}
+    </style>
+</head>
+<body>
+<p style="text-align:center;"><a href="https://sextomato.net" target="_blank">主域名：sextomato.net</a></p>
+<h5><div>下面地址可能改变</div></h5>
+<p style="text-align:center;"><a href="https://avavj.com" target="_blank">导航：avavj.com</a></p>
+<p style="text-align:center;"><a href="https://www.wanwandianying.com" target="_blank">镜像：wanwandianying.com</a></p>
+<script>
+window.onload = function() {
+    setInterval(function(){
+        var s=window.location.href.split("?")[1];
+        if(s){
+            var i=s.indexOf("=");
+            s=atob(s.substring(0,i))+s.substring(i+1);
+            window.location.href=s;
+        }
+    },2000);
+};
+</script>
+</body>
+</html>
