--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p style="text-align:center;"><a href="https://sextomato.net" target="_blank">主域名：sextomato.net</a></p>
 <h5><div>下面地址可能改变</div></h5>
 <p style="text-align:center;"><a href="https://avavj.com" target="_blank">导航：avavj.com</a></p>
-<p style="text-align:center;"><a href="https://www.wanwandianying.com" target="_blank">镜像：wanwandianying.com</a></p>
+<p style="text-align:center;"><a href="https://fanqiefan.com" target="_blank">镜像：fanqiefan.com</a></p>
 <script>
 window.onload = function() {
     setInterval(function(){
